--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9
+          version: 10
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -23,18 +23,8 @@ jobs:
           node-version: 20
           cache: pnpm
 
-      - name: Install dependencies (if lockfile exists)
-        run: |
-          if [ -f pnpm-lock.yaml ]; then
-            pnpm install --frozen-lockfile
-          else
-            echo "No lockfile yet (scaffold phase). Skipping install."
-          fi
+      - name: Install dependencies
+        run: pnpm install
 
-      - name: Lint placeholder
-        run: |
-          echo "TODO: add lint command when app/API code exists"
-
-      - name: Typecheck placeholder
-        run: |
-          echo "TODO: add typecheck command when TS project files exist"
+      - name: Run scaffold CI command
+        run: pnpm run ci
