--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,14 +15,14 @@ jobs:
       - name: Deploy to Azure Static Web Apps (skeleton)
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }} # TODO
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: upload
-          app_location: apps/web # TODO: verify when implementation exists
-          api_location: api      # TODO: verify when implementation exists
-          output_location: dist  # TODO: set real build output
+          app_location: apps/web
+          api_location: api
+          output_location: .
+          skip_deploy_on_missing_secrets: true
         env:
-          # TODO: configure runtime secrets/variables in SWA settings
           STORAGE_MODE: azure
           BLOB_SAS_URL: ${{ secrets.BLOB_SAS_URL }}
           STATE_BLOB_NAME: state.json
