--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
     branches: [main]
 
 jobs:
-  scaffold-ci:
+  workspace-build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -24,5 +24,5 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run scaffold CI command
-        run: pnpm run ci
+      - name: Run workspace build checks
+        run: pnpm -r --if-present build
