fix: add @types/node to api build

--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "@azure/functions": "^4.8.0"
   },
   "devDependencies": {
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "@types/node": "^20.0.0"
   }
 }
