--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "lint": "echo \"no lint yet\"",
     "typecheck": "echo \"no typecheck yet\"",
     "ci": "pnpm -r --if-present build && pnpm -r --if-present lint && pnpm -r --if-present typecheck && pnpm -r --if-present test"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.0"
   }
 }
