--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": ".",
     "moduleResolution": "NodeNext",
     "module": "NodeNext",
     "types": ["node"]
