feat: persist state to local json with optimistic concurrency

--- a/api/local.settings.example.json
+++ b/api/local.settings.example.json
@@ -2,6 +2,8 @@
   "IsEncrypted": false,
   "Values": {
     "FUNCTIONS_WORKER_RUNTIME": "node",
-    "AzureWebJobsStorage": "UseDevelopmentStorage=true"
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+    "STORAGE_MODE": "local",
+    "LOCAL_STATE_PATH": "./.local/state.json"
   }
 }
