feat(api): add Azure Blob SAS storage mode with ETag concurrency

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,16 @@
 STORAGE_MODE=local
 LOCAL_STATE_PATH=./.local/state.json
+
+# Azure Blob mode (STORAGE_MODE=azure)
+# BLOB_SAS_URL may point to a container SAS URL or a specific blob SAS URL.
+BLOB_SAS_URL=
+STATE_BLOB_NAME=state.json
+# Optional hint; adapter auto-detects by URL path extension.
+BLOB_KIND=
+
 FAMILY_PASSKEY=123456
 TOKEN_SECRET=dev-secret-change-me
 OPENAI_API_KEY=
 OPENAI_MODEL=
-BLOB_SAS_URL=
-STATE_BLOB_NAME=state.json
 RATE_LIMIT_WINDOW_SEC=300
 RATE_LIMIT_MAX_CALLS=20
