feat(api): add structured OpenAI NL parser with safe action executor

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ BLOB_KIND=
 FAMILY_PASSKEY=123456
 TOKEN_SECRET=dev-secret-change-me
 OPENAI_API_KEY=
-OPENAI_MODEL=
+OPENAI_MODEL=gpt-4.1-mini
 RATE_LIMIT_WINDOW_SEC=300
 RATE_LIMIT_MAX_CALLS=20
+
+OPENAI_PARSER_ENABLED=false
+OPENAI_MAX_CONTEXT_CHARS=8000
