--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
     "build": "pnpm run clean && tsc -p tsconfig.json",
     "dev": "pnpm run build && func start",
-    "start": "func start"
+    "start": "func start",
+    "test": "pnpm run build && node --test dist/**/*.test.js"
   },
   "dependencies": {
     "@azure/functions": "^4.8.0"
