feat: group link + phone-gated join + per-group blob state

--- a/api/local.settings.example.json
+++ b/api/local.settings.example.json
@@ -4,9 +4,10 @@
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "STORAGE_MODE": "local",
-    "LOCAL_STATE_PATH": "./.local/state.json",
+    "LOCAL_STATE_PREFIX": "./.localstate/familyscheduler/groups",
     "BLOB_SAS_URL": "",
-    "STATE_BLOB_NAME": "state.json",
+    "STATE_BLOB_PREFIX": "familyscheduler/groups",
+    "DEFAULT_COUNTRY": "US",
     "BLOB_KIND": "",
     "LOCATION_AI_FORMATTING": "false",
     "LOCATION_AI_MODEL": "",
