Fix Flex Functions deploy packaging and CI pipeline

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test": "echo \"no tests yet\"",
     "lint": "echo \"no lint yet\"",
     "typecheck": "echo \"no typecheck yet\"",
-    "ci": "pnpm -r --if-present build && pnpm -r --if-present lint && pnpm -r --if-present typecheck && pnpm -r --if-present test"
+    "ci": "pnpm -r --if-present build && pnpm -r --if-present lint && pnpm -r --if-present typecheck && pnpm -r --if-present test",
+    "deploy:api:package": "pnpm --filter @familyscheduler/api build && node scripts/package-api-deploy.mjs",
+    "deploy:api:ship": "bash scripts/ship-api.sh"
   },
   "devDependencies": {
     "typescript": "^5.5.0"
