--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,52 @@
-name: Deploy
+name: Deploy API (prod)
 
 on:
   workflow_dispatch:
   push:
     branches: [main]
+    paths:
+      - 'api/**'
+      - 'scripts/package-api-deploy.mjs'
+      - '.github/workflows/deploy.yml'
+      - 'pnpm-lock.yaml'
+      - 'package.json'
 
 jobs:
-  deploy-swa:
+  deploy-api-prod:
     runs-on: ubuntu-latest
+    environment: prod
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Deploy to Azure Static Web Apps (skeleton)
-        uses: Azure/static-web-apps-deploy@v1
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          action: upload
-          app_location: apps/web
-          api_location: api
-          output_location: .
-          skip_deploy_on_missing_secrets: true
-        env:
-          STORAGE_MODE: azure
-          BLOB_SAS_URL: ${{ secrets.BLOB_SAS_URL }}
-          STATE_BLOB_NAME: state.json
-          FAMILY_PASSKEY: ${{ secrets.FAMILY_PASSKEY }}
-          TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_MODEL: ${{ secrets.OPENAI_MODEL }}
+          node-version: 22
+          cache: pnpm
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Build and package API artifact
+        run: pnpm deploy:api:package
+
+      - name: Azure login (OIDC)
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Deploy zip to Function App (Flex)
+        run: |
+          az functionapp deployment source config-zip \
+            --name familyscheduler-api-prod \
+            --resource-group familyscheduler-prod-rg \
+            --src .artifacts/deploy/familyscheduler-api.zip
