--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,13 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      - name: Ensure Node Functions worker runtime setting
+        run: |
+          az functionapp config appsettings set \
+            --name familyscheduler-api-prod \
+            --resource-group familyscheduler-prod-rg \
+            --settings FUNCTIONS_WORKER_RUNTIME=node
+
       - name: Deploy zip to Function App (Flex)
         run: |
           az functionapp deployment source config-zip \
