--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -26,9 +26,9 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build web app
-        env:
-          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
         run: pnpm --filter @familyscheduler/web build
+        env:
+          VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL }}
 
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
