--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -30,6 +30,15 @@ jobs:
         env:
           VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL }}
 
+      - name: Assert VITE_API_BASE_URL present in build
+        run: |
+          echo "VITE_API_BASE_URL=$VITE_API_BASE_URL"
+          test -n "$VITE_API_BASE_URL"
+          rg -n "familyscheduler-api-prod\.azurewebsites\.net" apps/web/dist -S || true
+          rg -n "Missing VITE_API_BASE_URL" apps/web/dist -S || true
+        env:
+          VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL }}
+
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
