Let SWA build web app from source to avoid stale dist deployment

--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -25,17 +25,10 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build web app
-        run: pnpm --filter @familyscheduler/web build
-        env:
-          VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL }}
-
-      - name: Assert VITE_API_BASE_URL present in build
+      - name: Assert VITE_API_BASE_URL configured
         run: |
           echo "VITE_API_BASE_URL=$VITE_API_BASE_URL"
           test -n "$VITE_API_BASE_URL"
-          rg -n "familyscheduler-api-prod\.azurewebsites\.net" apps/web/dist -S || true
-          rg -n "Missing VITE_API_BASE_URL" apps/web/dist -S || true
         env:
           VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL }}
 
@@ -43,9 +36,9 @@ jobs:
         uses: Azure/static-web-apps-deploy@v1
         with:
           action: upload
-          app_location: apps/web/dist
-          output_location: ''
-          skip_app_build: true
+          app_location: apps/web
+          output_location: dist
+          skip_app_build: false
           api_location: ''
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
