Attach SWA integrated API and default web calls to same-origin

--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -25,13 +25,6 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Assert VITE_API_BASE_URL configured
-        run: |
-          echo "VITE_API_BASE_URL=$VITE_API_BASE_URL"
-          test -n "$VITE_API_BASE_URL"
-        env:
-          VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL }}
-
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
@@ -39,6 +32,8 @@ jobs:
           app_location: apps/web
           output_location: dist
           skip_app_build: false
-          api_location: ''
+          api_location: api
+          api_build_command: pnpm --filter @familyscheduler/api build
+          skip_api_build: false
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
