--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
-    "build": "pnpm run clean && tsc -p tsconfig.json",
+    "build": "npm run clean && tsc -p tsconfig.json",
     "dev": "pnpm run build && func start",
     "start": "func start",
     "test": "pnpm run build && node --test dist/**/*.test.js"
