--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -25,9 +25,13 @@ jobs:
 
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
+        env:
+          VITE_BUILD_SHA: ${{ github.sha }}
+          VITE_BUILD_TIME: ${{ github.run_number }}-${{ github.run_id }}
         with:
           action: upload
           app_location: apps/web
+          app_build_command: pnpm build
           output_location: dist
           skip_app_build: false
           api_location: api
