--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -1,12 +1,17 @@
 name: Deploy Web (SWA)
 
 on:
+  workflow_dispatch:
   push:
     branches: [main]
 
 jobs:
   build-and-deploy-web:
     runs-on: ubuntu-latest
+    env:
+      VITE_BUILD_SHA: ${{ github.sha }}
+      VITE_BUILD_RUN: ${{ github.run_number }}
+      VITE_BUILD_TIME: ${{ github.run_id }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,9 +30,6 @@ jobs:
 
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
-        env:
-          VITE_BUILD_SHA: ${{ github.sha }}
-          VITE_BUILD_TIME: ${{ github.run_number }}-${{ github.run_id }}
         with:
           action: upload
           app_location: apps/web
