--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -31,11 +31,10 @@ jobs:
         with:
           action: upload
           app_location: apps/web
-          app_build_command: pnpm build
+          app_build_command: npm run build
           output_location: dist
           skip_app_build: false
           api_location: api
-          api_build_command: npm run build
           skip_api_build: false
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
