--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -23,18 +23,28 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Validate BYO API base URL
+        env:
+          VITE_API_BASE_URL: "https://familyscheduler-api-prod-c4cuakggcff8bvbh.westus-01.azurewebsites.net"
+        run: |
+          if [ -z "$VITE_API_BASE_URL" ]; then
+            echo "VITE_API_BASE_URL must be set for BYO API routing"
+            exit 1
+          fi
+
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         env:
           VITE_BUILD_SHA: ${{ github.sha }}
           VITE_BUILD_TIME: ${{ github.run_id }}-${{ github.run_number }}
+          VITE_API_BASE_URL: "https://familyscheduler-api-prod-c4cuakggcff8bvbh.westus-01.azurewebsites.net"
         with:
           action: upload
           app_location: apps/web
           app_build_command: npm run build
           output_location: dist
           skip_app_build: false
-          api_location: api
-          skip_api_build: false
+          api_location: ""
+          skip_api_build: true
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
