--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,9 +54,10 @@ jobs:
             --src api.zip
 
       - name: Verify deployed Function App responds (non-404)
-        env:
-          FUNCTION_APP_URL: https://familyscheduler-api-prod.azurewebsites.net
         run: |
+          APP_HOST=$(az functionapp show --name familyscheduler-api-prod --resource-group familyscheduler-prod-rg --query defaultHostName -o tsv)
+          FUNCTION_APP_URL="https://$APP_HOST"
+
           ROOT_STATUS=$(curl -sS -o /tmp/function-root.out -w "%{http_code}" "$FUNCTION_APP_URL")
           echo "Function App root status: $ROOT_STATUS"
           curl -i "$FUNCTION_APP_URL" || true
