--- a/api/package.json
+++ b/api/package.json
@@ -12,12 +12,13 @@
     "test": "pnpm run build && node --test dist/**/*.test.js"
   },
   "dependencies": {
+    "@azure/core-rest-pipeline": "^1.22.2",
     "@azure/functions": "^4.8.0",
     "@azure/identity": "^4.6.0",
-    "@azure/storage-blob": "^12.27.0"
+    "@azure/storage-blob": "^12.31.0"
   },
   "devDependencies": {
-    "typescript": "^5.9.2",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "typescript": "^5.9.2"
   }
 }
