--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,20 +39,40 @@ jobs:
       - name: Build clean deploy staging directory (api_deploy)
         run: |
           set -euo pipefail
-          rm -rf api_deploy api.zip
+          set -x
+
+          rm -rf api_deploy api_deploy_install api.zip
           mkdir -p api_deploy
 
           cp api/host.json api_deploy/host.json
           cp api/package.json api_deploy/package.json
           cp pnpm-lock.yaml api_deploy/pnpm-lock.yaml
           cp -R api/dist api_deploy/dist
+
           for d in api/*/; do
             if [ -f "${d}function.json" ]; then
               cp -R "$d" "api_deploy/$(basename "$d")"
             fi
           done
 
-          (cd api_deploy && pnpm install --prod --frozen-lockfile)
+          # Create a portable production install
+          pnpm --filter @familyscheduler/api deploy --legacy --prod ./api_deploy_install
+
+          echo "DEBUG: api_deploy_install contents"
+          ls -la api_deploy_install || true
+          echo "DEBUG: api_deploy_install/node_modules exists?"
+          test -d api_deploy_install/node_modules
+
+          # Copy node_modules into api_deploy (dereference symlinks so Azure zip deploy works)
+          cp -RL api_deploy_install/node_modules api_deploy/node_modules
+
+          echo "DEBUG: api_deploy/node_modules/@azure (top-level)"
+          ls -la api_deploy/node_modules/@azure || true
+
+          # Hard asserts: staging must include node_modules and key deps
+          test -d api_deploy/node_modules
+          test -d api_deploy/node_modules/@azure/storage-blob
+          test -d api_deploy/node_modules/@azure/storage-common
 
       - name: Validate deploy staging directory
         run: |
